# CommentService

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  api.http  consumer_comment_changed.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: API_EXAMPLES.md  DOCKER.md  MIGRATIONS.md  README.md  UV.md  database_libraries_comparison.md
scripts/: curl_examples.sh  test_api.sh
src/application/use_cases/: comment_use_cases.py  user_use_cases.py
src/domain/: exceptions.py
src/domain/entities/: comment.py  user.py
src/domain/repositories/: user_repository.py
src/infrastructure/: config.py
src/infrastructure/database/: connection.py  migration_runner.py
src/infrastructure/database/migrations/: 001_create_users_table.sql  002_create_products_table.sql.example  003_add_user_avatar.sql.example  README.md
src/infrastructure/messaging/: kafka_producer.py
src/infrastructure/repositories/: postgres_comment_repository.py  postgres_user_repository.py
src/presentation/api/: app.py  dependencies.py
src/presentation/api/routes/: comments.py  users.py
src/presentation/schemas/: comment_schemas.py  user_schemas.py
tests/: conftest.py  test_users_api.py
